test/Dialect/QEC/invalid.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt %s -split-input-file -verify-diagnostics

// Verifier: detectors_vectorized with mismatched sized types.
func.func @mismatched_sizes(%prev: !quake.measurements<3>,
                            %curr: !quake.measurements<5>) {
  // expected-error @+1 {{prev and curr measurement vectors must have matching sizes, got 3 and 5}}
  qec.detectors_vectorized(%prev, %curr) : (!quake.measurements<3>, !quake.measurements<5>)
  return
}

// -----

// OK: matching sized types should pass verification.
func.func @matching_sizes(%prev: !quake.measurements<4>,
                          %curr: !quake.measurements<4>) {
  qec.detectors_vectorized(%prev, %curr) : (!quake.measurements<4>, !quake.measurements<4>)
  return
}

// -----

// OK: unsized types defer to runtime check.
func.func @unsized_types(%prev: !quake.measurements<?>,
                         %curr: !quake.measurements<?>) {
  qec.detectors_vectorized(%prev, %curr) : (!quake.measurements<?>, !quake.measurements<?>)
  return
}

// -----

// OK: one sized, one unsized defers to runtime.
func.func @mixed_sizes(%prev: !quake.measurements<3>,
                       %curr: !quake.measurements<?>) {
  qec.detectors_vectorized(%prev, %curr) : (!quake.measurements<3>, !quake.measurements<?>)
  return
}
